
MASTER

* 


* 2.2.15 * (March 23rd, 2009)

* Better add_lock! method that can add the lock to just about all the elements in the statement. This 
  could be eager loaded associations, joins, etc. Done so that paginated results can easily add lock 
  options for performance. Note, the tally count in add_limit_offset! use "WITH (NOLOCK)" explicitly 
  as it can not hurt and is needed. [Ken Collins]


* 2.2.14 * (March 17th, 2009)

* Rails2.3 - Back passing tests on 2.2 work. Includes: (1) Created new test helpers that check ActiveRecord 
  version strings so we can conditionally run 2.2 and 2.3 tests. (2) Making TransactionTestSqlserver use Ship vs 
  Bird model. Also made it conditional run a few blocks for different versions of ActiveRecord. (3) Previous 
  JoinDependency#aliased_table_name_for is now only patched in ActiveRecord equal or greater than 2.3. [Ken Collins]

* Rails2.3 - Implement new savepoint support [Ken Collins]
  http://rails.lighthouseapp.com/projects/8994/tickets/383
  http://www.codeproject.com/KB/database/sqlservertransactions.aspx

* Rails2.3 - Coerce NestedScopingTest#test_merged_scoped_find to use correct regexp for adapter. [Ken Collins]

* Rails2.3 - Implement a custom ActiveRecord::Associations::ClassMethods::JoinDependency::JoinAssociation#aliased_table_name_for
  method that uses a Regexp.escape so that table/column quoting does not get ignored. [Ken Collins]

* Rails2.3 - Implement #outside_transaction? and a new transaction test case to test some SQL Server 
  basic support while implementing this method. Future home of some savepoint tests too. [Ken Collins]

* Rails2.3 - Coerced tests that ensure hash conditions on referenced tables are considered when eager 
  loading with limit/offset. Information on these changes and the ticket in rails are.
  http://github.com/rails/rails/commit/9a4d557713acb0fc8e80f61af18094034aca029a